# Trashmarket.fun

./: .env  .env.example  .env.local.example  .gitignore  AIRDROP_INTEGRATION.md  ANALYSIS_REPORTS_README.md  Anchor.toml  App.tsx  BRIDGE_SECURITY.md  CLOUDFLARE_SETUP_GUIDE.md  COMPLETE_DEPLOYMENT_INSTRUCTIONS.md  Cargo.toml  DEPLOYMENT_GUIDE.md  DNS_SETTINGS.md  EXISTING_D1_DATABASES_DO_NOT_TOUCH.md  FRONTEND_BACKEND_INTEGRATION_PROMPT.md  GORID_TRADABILITY_ANALYSIS.md  HANDOFF_SUMMARY.md  IMPLEMENTATION_PLAN.md  MASTER_PRODUCTION_SUMMARY.md  NEXT_STEPS.md  PRE_DEPLOYMENT_CHECKLIST.md  PRODUCTION_CHECKLIST.md  PRODUCTION_CHECKLIST_FOCUSED.md  PRODUCTION_READINESS_REPORT.md  Plan for AI Assistant_ Replacing Legacy Gorbagio with Native NFT Marketplace on Trashmarket.fun.md  QUICK_REFERENCE_GUIDE.md  README.md  REORGANIZATION_PLAN.md  SECURITY_AUDIT.md  SECURITY_POLICY.md  SOLGOR-DEV-SKILL.md  Step-by-Step AI Instruction_ Gorbagana Bridge Deployment (FINAL).md  VANITY_IMPLEMENTATION_VERIFICATION.md  VANITY_REVIEW_MARKMAP_PROMPT.md  VANITY_SECURITY_AUDIT.md  VULNERABILITY_MITIGATION.md  amm_v3.json  bang_main.json  check_raffle_state.ts  (+24 more)
.claude/: settings.json
airdrop/: package.json  todo.md
assets/: JunkPusherGame-7Vhk1nRX.js  JunkPusherGame-C2JpiqM6.js  JunkPusherGame-C9VE3I2O.js  JunkPusherGame-CTMVTN6F.js  JunkPusherGame-CTaLJZJK.js  JunkPusherGame-CUIX24S3.js  JunkPusherGame-Cc8766C2.js  JunkPusherGame-Ck8FMxpQ.js  JunkPusherGame-Ct98_dfG.js  JunkPusherGame-D_kAfe8y.js  JunkPusherGame-Dk5syPvd.js  JunkPusherGame-DpKoiIfo.js  JunkPusherGame-PpNpQXfC.js  JunkPusherGame-U2GEZ36E.js  JunkPusherGame-lx4doOpZ.js  JunkPusherGame-ntngrBTb.js  SkillGame-BmVaxJCV.css  SkillGame-BwBXdfxS.js  SkillGame-COFvq1-A.js  SkillGame-CTCjHcxw.js  SkillGame-DmHrf1eP.js  SkillGame-DpVMxkZU.js  SkillGame-GYbwrnDT.js  debris-metadata.json  index-32yDycXU.js  index-6A508BbD.js  index-7UGeaYJf.js  index-BCgGubVp.css  index-BFWuoDjU.js  index-BMz7eLO9.js  index-BNSAFXhM.js  index-BQ8lxBhZ.js  index-BSj5KZoA.js  index-BUaSeSqR.css  index-B_U9z4rz.js  index-BfWtF_rv.js  index-BhwhGm6c.js  index-BmnyZCEQ.js  index-BoodprLD.js  index-BqbojlbL.js  (+37 more)
backend/: README.md  package-lock.json  package.json  wrangler.toml
bridge/: .gitignore  Anchor.toml  Cargo.toml  README.md  check_sgor.ts  cli.ts  package-lock.json  package.json  pnpm-lock.yaml  test_mainnet.ts
bridge-solana/: Anchor.toml  DEPLOYMENT_GUIDE.md  DEVNET_TESTING.md  DEVNET_TEST_TOKEN.md  FAUCET_README.md  README.md
bridge-solana/programs/solana-bridge/: Cargo.toml
bridge-solana/programs/solana-bridge/src/: lib.rs
bridge/programs/bridge/: Cargo.toml
bridge/programs/bridge/src/: lib.rs
components/: Footer.tsx  LotteryTickets.tsx  NFTCard.tsx  Navbar.tsx  Notifications.tsx  PriceChart.tsx  PriceTicker.tsx  TicketIcon.tsx  TrashDAQSwap.tsx
contexts/: AnchorContext.tsx  NetworkContext.tsx  WalletContext.tsx
data/: gorigin-images.json
docs/: DEBRIS-Tokenomics.md  Skill-Game.md
idl/: goraffle.json  goraffle.ts  gorbagana_bridge.json  gorbagana_bridge.ts  solana_bridge.json  vanity_miner.json
lib/: GameEngine.ts  JunkPusherClient.ts  constants.ts  gameSecurityModule.test.ts  gameSecurityModule.ts  rpcConfig.ts  securityWrapper.ts  shapeMath.ts  (+11 more)
programs/gorbagio-marketplace/: Cargo.toml
programs/gorbagio-marketplace/src/: error.rs  lib.rs  state.rs
programs/gorbagio-marketplace/src/instructions/: buy_nft.rs  cancel_listing.rs  close_orphaned_escrow.rs  initialize.rs  list_nft.rs  mod.rs  update_price.rs
programs/gorbagio-migration/: Cargo.toml
programs/gorbagio-migration/src/: lib.rs
programs/junkpusher/: Cargo.toml
programs/junkpusher/src/: lib.rs
programs/nft-launchpad/: Cargo.toml
programs/nft-launchpad/src/: lib.rs
vanity-miner/programs/vanity-miner/: Cargo.toml
vanity-miner/programs/vanity-miner/src/: lib.rs
(+246 files in other folders)
