[package]
name = "gorbagio-marketplace"
version = "0.1.0"
description = "Gorbagio NFT Marketplace with on-chain escrow"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "gorbagio_marketplace"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]

[dependencies]
anchor-lang = { version = "0.30.1", features = ["init-if-needed"] }
anchor-spl = "0.30.1"
mpl-token-metadata = "4.1.2"
