[package]
name = "junkpusher"
version = "0.1.0"
description = "Junk Pusher game program for Gorbagana - DEBRIS token"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "junkpusher"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]

[dependencies]
anchor-lang = { version = "0.30.1" }
anchor-spl = "0.30.1"

# Pin blake3 to version compatible with SBF toolchain (edition 2021)
blake3 = "=1.5.5"
