[package]
name = "nft-launchpad"
version = "0.1.0"
description = "NFT Launchpad program for JUST ALIENS collection on Gorbagana"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "nft_launchpad"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]

[dependencies]
anchor-lang = { version = "0.30.1", features = ["init-if-needed"] }
anchor-spl = "0.30.1"
mpl-token-metadata = "4.1.2"
