[package]
name = "gorbagana-bridge"
version = "0.1.0"
description = "Gorbagana Bridge - P2P OTC sGOR/gGOR swap program"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "gorbagana_bridge"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]

[dependencies]
anchor-lang = { version = "0.30.1", features = ["init-if-needed"] }
anchor-spl = "0.30.1"
