[package]
name = "vanity-miner"
version = "0.1.0"
description = "Vanity Miner - Pay-per-batch GOR mining for custom Gorbagana addresses"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "vanity_miner"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []
idl-build = ["anchor-lang/idl-build"]

[dependencies]
anchor-lang = { version = "0.30.1", features = ["init-if-needed"] }
